# LocalMeshAI

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  LICENSE-ASSETS.md  README.md  start-dev.ps1  start-dev.sh
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  file_format_request.md  geometry_operation_failure.md  ui_ux_improvement.md
backend/: config.py  conftest.py  main.py  models.py  pyproject.toml  requirements.txt
backend/blender_scripts/: analyze_mesh.py  apply_boolean.py  export_mesh.py
backend/services/: __init__.py  ai_planner.py  blender_engine.py  geometry_engine.py  helpers.py  mesh_analyzer.py  project_store.py  trimesh_engine.py
backend/tests/: test_api.py  test_geometry.py
docs/: ARCHITECTURE.md  GEOMETRY_PIPELINE.md  LICENSING.md  ROADMAP.md  USER_WORKFLOW.md
examples/: README.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AIPanel.tsx  AnnotationLayer.tsx  HelperMesh.tsx  Inspector.tsx  ObjectTree.tsx  StatusConsole.tsx  Toolbar.tsx  Viewer3D.tsx
frontend/src/geometry/: helperGeometry.ts  loaders.ts  picker.ts  sceneState.ts  transformUtils.ts
frontend/src/store/: projectStore.ts
frontend/src/types/: operations.ts  project.ts
projects/: .gitkeep
test_assets/: README.md  make_test_assets.py  plate_with_hole.stl
