[project]
name = "localmeshai-backend"
version = "0.1.0"
description = "Local-first geometry & AI-planner backend for LocalMeshAI"
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "starlordz12" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "pydantic>=2.6",
    "trimesh>=4.0",
    "numpy>=1.24",
    "manifold3d>=2.3",
    "networkx>=3.0",
    "lxml>=4.9",
    "pillow>=10.0",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
